--- a/test/hieradata/module.yaml
+++ b/test/hieradata/module.yaml
@@ -13,8 +13,8 @@ apt::pins:
 gitlab_ci_multi_runner::user: 'root'
 gitlab_ci_multi_runner::version: 1.11.1
 gitlab_ci_multi_runner::install_service_file: false
-vm_config::gitlab_ci_multi_runner::gitlab_ci_runners:
-  azoxidcloud:
+sc_gitlabrunner::gitlab_ci_runners:
+  sctestrunner:
     user: root
     gitlab_ci_url: https://gitlab.scale.sc/ci
     token: 6H1xisbB9zvbfF2qtMZV
