--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -41,6 +41,26 @@ stages:
     - puppet apply -v test/site.pp
     - inspec exec test/inspec/sc_gitlabrunner.rb
 
+14.04:puppet5:
+  stage: Puppet 5
+  image: scalecommerce/base:0.6
+  script:
+    - ./test/install-puppet5.sh
+    - ./test/install.sh
+    - export PATH=/opt/puppetlabs/bin:$PATH
+    - puppet apply -v test/site.pp
+    - inspec exec test/inspec/sc_gitlabrunner.rb
+
+16.04:puppet5:
+  stage: Puppet 5
+  image: scalecommerce/xenial:1.0
+  script:
+    - ./test/install-puppet5.sh
+    - ./test/install.sh
+    - export PATH=/opt/puppetlabs/bin:$PATH
+    - puppet apply -v test/site.pp
+    - inspec exec test/inspec/sc_gitlabrunner.rb
+
 
 push2github:
   stage: push2github
