--- a/test/hieradata/module.yaml
+++ b/test/hieradata/module.yaml
@@ -12,7 +12,10 @@ apt::pins:
 
 gitlab_ci_multi_runner::user: 'root'
 gitlab_ci_multi_runner::version: 1.11.1
-gitlab_ci_multi_runner::service_enable: false
+#gitlab_ci_multi_runner::service_enable: false
+gitlab_ci_multi_runner::service_ensure: 'stopped'
+gitlab_ci_multi_runner::service_start: '/usr/local/bin/supervisorctl start gitlab-runner'
+gitlab_ci_multi_runner::service_stop: '/usr/local/bin/supervisorctl stop gitlab-runner'
 gitlab_ci_multi_runner::service_provider: supervisor
 gitlab_ci_multi_runner::params::manage_package_repo: true
 gitlab_ci_multi_runner::runners:
