add sleep for 16.04 test

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -19,7 +19,7 @@ stages:
   script:
     - ./test/install.sh
     - puppet apply -v test/site.pp
-#    - sleep 3600
+    - sleep 3600
     - inspec exec test/inspec/sc_gitlabrunner.rb
 
 14.04:puppet5:
