--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -30,6 +30,7 @@ stages:
     - ./test/install.sh
     - export PATH=/opt/puppetlabs/bin:$PATH
     - puppet apply -v test/site.pp
+#    - sleep 3600
     - inspec exec test/inspec/sc_gitlabrunner.rb
 
 16.04:puppet5:
@@ -40,6 +41,7 @@ stages:
     - ./test/install.sh
     - export PATH=/opt/puppetlabs/bin:$PATH
     - puppet apply -v test/site.pp
+#    - sleep 3600
     - inspec exec test/inspec/sc_gitlabrunner.rb
 
 
