--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,56 +4,49 @@ stages:
   - Puppet 5
   - push2github
 
-#14.04:puppet3:
-#  stage: Puppet 3
-#  image: scalecommerce/base:0.6
-#  script:
-#    - ./test/install.sh
-#    - puppet apply -v test/site.pp
+14.04:puppet3:
+  stage: Puppet 3
+  image: scalecommerce/base:0.6
+  script:
+    - ./test/install.sh
+    - puppet apply -v test/site.pp
 #    - sleep 3600
-#    - inspec exec test/inspec/sc_gitlabrunner.rb
-#    - echo "hallo"
+    - inspec exec test/inspec/sc_gitlabrunner.rb
 
 16.04:puppet3:
   stage: Puppet 3
-  image: scalecommerce/xenial:1.0
+  image: scalecommerce/xenial:1.2
   script:
-#    - ./test/install.sh
-#    - puppet apply -v test/site.pp
+    - ./test/install.sh
+    - puppet apply -v test/site.pp
 #    - sleep 3600
-#    - inspec exec test/inspec/sc_gitlabrunner.rb
-    - echo "hallo"
+    - inspec exec test/inspec/sc_gitlabrunner.rb
 
-#14.04:puppet5:
-#  stage: Puppet 5
-#  image: scalecommerce/base:0.6
-#  script:
-#    - ./test/install-puppet5.sh
-#    - ./test/install.sh
-#    - export PATH=/opt/puppetlabs/bin:$PATH
-#    - puppet apply -v test/site.pp
+14.04:puppet5:
+  stage: Puppet 5
+  image: scalecommerce/base:0.6
+  script:
+    - ./test/install-puppet5.sh
+    - ./test/install.sh
+    - export PATH=/opt/puppetlabs/bin:$PATH
+    - puppet apply -v test/site.pp
 #    - sleep 3600
-#    - inspec exec test/inspec/sc_gitlabrunner.rb
-#    - echo "hallo"
+    - inspec exec test/inspec/sc_gitlabrunner.rb
 
-#16.04:puppet5:
-#  stage: Puppet 5
-#  image: scalecommerce/xenial:1.0
-#  script:
-#    - ./test/install-puppet5.sh
-#    - ./test/install.sh
-#    - export PATH=/opt/puppetlabs/bin:$PATH
-#    - puppet apply -v test/site.pp
+16.04:puppet5:
+  stage: Puppet 5
+  image: scalecommerce/xenial:1.2
+  script:
+    - ./test/install-puppet5.sh
+    - ./test/install.sh
+    - export PATH=/opt/puppetlabs/bin:$PATH
+    - puppet apply -v test/site.pp
 #    - sleep 3600
-#    - inspec exec test/inspec/sc_gitlabrunner.rb
-#    - echo "hallo"
+    - inspec exec test/inspec/sc_gitlabrunner.rb
 
 
 push2github:
   stage: push2github
-  image: scalecommerce/xenial:1.0
+  image: scalecommerce/xenial:1.2
   script:
-    - pwd
-    - git log
     - git push --mirror https://$GITHUB_TOKEN@github.com/ScaleCommerce/sc_gitlabrunner.git
-#    - sleep 3600
