Remove legacy tests and add puppet 6

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,7 +1,8 @@
+image: scalecommerce/xenial:1.11
+
 stages:
-  - Puppet 3
-  - Puppet 4
   - Puppet 5
+  - Puppet 6
   - push2github
 
 14.04:puppet3:
@@ -35,7 +36,18 @@ stages:
 
 16.04:puppet5:
   stage: Puppet 5
-  image: scalecommerce/xenial:1.2
+  image: scalecommerce/xenial:1.11
+  script:
+    - ./test/install-puppet5.sh
+    - ./test/install.sh
+    - export PATH=/opt/puppetlabs/bin:$PATH
+    - puppet apply -v test/site.pp
+#    - sleep 3600
+    - inspec exec test/inspec/sc_gitlabrunner.rb
+
+16.04:puppet6:
+  stage: Puppet 6
+  image: scalecommerce/xenial:1.11
   script:
     - ./test/install-puppet5.sh
     - ./test/install.sh
@@ -47,6 +59,5 @@ stages:
 
 push2github:
   stage: push2github
-  image: scalecommerce/xenial:1.2
   script:
     - git push --quiet --mirror https://$GITHUB_TOKEN@github.com/ScaleCommerce/sc_gitlabrunner.git
